processed/jira/txt/LU/LU-9829.txt
Key:        LU-9829
Summary:    wrong pointer dereference in libcfs/util/parser.c
Link:       https://jira.whamcloud.com/browse/LU-9829
Type:       Bug
Priority:   Major
Status:     Resolved
Resolution: Fixed
Assignee:   WC Triage
Reporter:   Oleg Drokin
Created:    Fri, 4 Aug 2017 15:34:13 +0000
Updated:    Thu, 13 Sep 2018 18:00:12 +0000
Resolved:   Thu, 17 Aug 2017 04:34:58 +0000

--- Description ---
This is highleghted by newer gcc as in Fedora 26:

util/parser.c: In function Б─≤processБ─≥:
util/parser.c:199:28: error: comparison between pointer and zero character constant [-Werror=pointer-compare]
                 if ( *next == '\0' ) {
                            ^~
util/parser.c:199:22: note: did you mean to dereference the pointer?
                 if ( *next == '\0' ) {
                      ^
cc1: all warnings being treated as errors
make[4]: *** [autoMakefile:671: libcfsutil_a-parser.o] Error 1
make[4]: Leaving directory '/home/green/smt/git/lustre-release/libcfs/libcfs'

Apparently we really need to do double dereference on next.

--- Comment (gerrit, Thu, 13 Sep 2018 18:00:12 +0000) ---
Minh Diep (mdiep@whamcloud.com) uploaded a new patch: https://review.whamcloud.com/33159

Subject: LU-9829 lnet: Properly dereference string pointer

Project: fs/lustre-release

Branch: b2_10

Current Patch Set: 1

Commit: cd343f94aa59c245ccc2cda3c684b9539b7135e0

--- Comment (pjones, Thu, 17 Aug 2017 04:34:58 +0000) ---
Landed for 2.11

--- Comment (gerrit, Thu, 17 Aug 2017 01:30:24 +0000) ---
Oleg Drokin (oleg.drokin@intel.com) merged in patch https://review.whamcloud.com/28358/

Subject: LU-9829 lnet: Properly dereference string pointer

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 58c721a79b171f71862eb6a92f66f139689a747f

--- Comment (green, Fri, 4 Aug 2017 16:18:41 +0000) ---
Additionally there's a similar problem in lr_rsync_data():

                snprintf(cmd, PATH_MAX, "%s --inplace %s %s", rsync, info->src,
                        info->dest);
                lr_debug(DTRACE, "\t%s %s\n", cmd, info->tfid);
                status = system(cmd);

--- Comment (gerrit, Fri, 4 Aug 2017 15:37:33 +0000) ---
Oleg Drokin (oleg.drokin@intel.com) uploaded a new patch: https://review.whamcloud.com/28358

Subject: LU-9829 lnet: Properly dereference string pointer

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 869e8f07a2178ca33b83da82439ad8bd77363fa8
